samples/_failures_safe/1761619690_1333c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b419b712.c: In function ‘main’:
./samples/SAFE/__tmp_b419b712.c:163:1: error: expected declaration or statement at end of input
  163 | int main(void) {
      | ^~~
